forgot to end a curly brace

--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -64,6 +64,7 @@ figcaption {
   h1, h2, h3 {
     font-size: 1em;
   }
+}
  
  /*Later we will figure out how to make 
  things look like bacon. For now this is a work in progress.*/
